@@ -6,7 +6,7 @@
             "w": 16,
             "h": 16
         },
-        "name": "humus.png"
+        "name": "topsoil.png"
     },
     "color": {
         "r": 118,
